--- a/client/src/components/AboutSection.css
+++ b/client/src/components/AboutSection.css
@@ -3,8 +3,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 7rem 2rem;
+    padding: 6rem 2rem;
     position: relative;
+    overflow: hidden;
+    scroll-margin-top: 70px;
 }
 
 .about-container {
